src/components/controller/util/dsl/grammar/dsl.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Expression: peg$parseExpression },
      peg$startRuleFunction  = peg$parseExpression,

      peg$c0 = function(head, tail) {
              head.open = tail;
              return head;
          },
      peg$c1 = function(activity, opens, closes) {
            activity.open = opens;
            activity.close = closes;
            return activity;
          },
      peg$c2 = function(activity, opens, due, cutoff) {
            activity.open = opens;
            activity.due = due;
            activity.cutoff = cutoff;
            return activity;
          },
      peg$c3 = function(head, tail) {
          return {"type": head, "i": tail};
        },
      peg$c4 = function(head, tail) {
          return {"type": head, "i": tail}
        },
      peg$c5 = peg$otherExpectation("Moodle Quiz Open Time"),
      peg$c6 = peg$otherExpectation("Moodle Quiz Close Time"),
      peg$c7 = peg$otherExpectation("Moodle Homework Allow Submissions Time"),
      peg$c8 = peg$otherExpectation("Moodle Homework Due Time"),
      peg$c9 = peg$otherExpectation("Moodle Homework Cutoff Time"),
      peg$c10 = peg$otherExpectation("Activity Number (e.g., E1 for Exam 1)"),
      peg$c11 = function(head, tail) {
           return {"type": head, "i": tail};
         },
      peg$c12 = function(head, tail) {
          var result = head, i;
          if (tail !== null) {
              if (tail["modifier"] !== null) {
                  result.modifier = tail["modifier"];
              }
              var time = {}
              if (tail["offset"] !== null) {
                  time.modifier = tail["offset"][0]
                  time.number = tail["offset"][1][0]
                  time.type = tail["offset"][1][1]
              }
              if (tail["at"] !== null) {
                  time.at = tail["at"][1];
              }
              if (Object.keys(time).length > 0) {
                  result.time = time;
              }
              var modif = {};
          }

          return result;
        },
      peg$c13 = function(code) { return code; },
      peg$c14 = peg$otherExpectation("Meeting Number (e.g., S2 for Seminar 2)"),
      peg$c15 = function(meeting, number) { return {"type": meeting, "i": number}},
      peg$c16 = "-",
      peg$c17 = peg$literalExpectation("-", false),
      peg$c18 = "+",
      peg$c19 = peg$literalExpectation("+", false),
      peg$c20 = "@",
      peg$c21 = peg$literalExpectation("@", false),
      peg$c22 = function(time, offset, at) {return {"modifier":time, "offset":offset, "at":at}},
      peg$c23 = function(at) {return {"modifier":null, "offset":null, "at":at}},
      peg$c24 = "m",
      peg$c25 = peg$literalExpectation("m", false),
      peg$c26 = "h",
      peg$c27 = peg$literalExpectation("h", false),
      peg$c28 = "d",
      peg$c29 = peg$literalExpectation("d", false),
      peg$c30 = "w",
      peg$c31 = peg$literalExpectation("w", false),
      peg$c32 = /^[2]/,
      peg$c33 = peg$classExpectation(["2"], false, false),
      peg$c34 = /^[0-3]/,
      peg$c35 = peg$classExpectation([["0", "3"]], false, false),
      peg$c36 = /^[0-1]/,
      peg$c37 = peg$classExpectation([["0", "1"]], false, false),
      peg$c38 = /^[0-9]/,
      peg$c39 = peg$classExpectation([["0", "9"]], false, false),
      peg$c40 = ":",
      peg$c41 = peg$literalExpectation(":", false),
      peg$c42 = /^[0-5]/,
      peg$c43 = peg$classExpectation([["0", "5"]], false, false),
      peg$c44 = function() { return text() },
      peg$c45 = peg$otherExpectation("integer"),
      peg$c46 = function() { return parseInt(text(), 10); },
      peg$c47 = peg$otherExpectation("whitespace"),
      peg$c48 = /^[ \t]/,
      peg$c49 = peg$classExpectation([" ", "\t"], false, false),
      peg$c50 = "Exam",
      peg$c51 = peg$literalExpectation("Exam", false),
      peg$c52 = "E",
      peg$c53 = peg$literalExpectation("E", false),
      peg$c54 = function() { return "Exam"},
      peg$c55 = "Quiz",
      peg$c56 = peg$literalExpectation("Quiz", false),
      peg$c57 = "Q",
      peg$c58 = peg$literalExpectation("Q", false),
      peg$c59 = function() { return "Quiz"},
      peg$c60 = "Homework",
      peg$c61 = peg$literalExpectation("Homework", false),
      peg$c62 = "H",
      peg$c63 = peg$literalExpectation("H", false),
      peg$c64 = function() { return "Homework"},
      peg$c65 = "Seminar",
      peg$c66 = peg$literalExpectation("Seminar", false),
      peg$c67 = "S",
      peg$c68 = peg$literalExpectation("S", false),
      peg$c69 = function() {return 'Seminar'; },
      peg$c70 = "Laboratory",
      peg$c71 = peg$literalExpectation("Laboratory", false),
      peg$c72 = "L",
      peg$c73 = peg$literalExpectation("L", false),
      peg$c74 = function() {return 'Laboratory'; },
      peg$c75 = "Practicum",
      peg$c76 = peg$literalExpectation("Practicum", false),
      peg$c77 = "P",
      peg$c78 = peg$literalExpectation("P", false),
      peg$c79 = function() {return 'Practicum'; },
      peg$c80 = "Start",
      peg$c81 = peg$literalExpectation("Start", false),
      peg$c82 = function() {return 'Start'; },
      peg$c83 = "Finish",
      peg$c84 = peg$literalExpectation("Finish", false),
      peg$c85 = "F",
      peg$c86 = peg$literalExpectation("F", false),
      peg$c87 = "End",
      peg$c88 = peg$literalExpectation("End", false),
      peg$c89 = function() {return 'End'; },
      peg$c90 = "#",
      peg$c91 = peg$literalExpectation("#", false),
      peg$c92 = peg$anyExpectation(),
      peg$c93 = function() { return 'comment';},
      peg$c94 = " ",
      peg$c95 = peg$literalExpectation(" ", false),
      peg$c96 = "\t",
      peg$c97 = peg$literalExpectation("\t", false),
      peg$c98 = "\r\n",
      peg$c99 = peg$literalExpectation("\r\n", false),
      peg$c100 = "\n",
      peg$c101 = peg$literalExpectation("\n", false),
      peg$c102 = "\r",
      peg$c103 = peg$literalExpectation("\r", false),
      peg$c104 = function() { return "EOF"; },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseExpression() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseSpacing();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseRule();
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseRule();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseEndOfFile();
        if (s3 !== peg$FAILED) {
          s1 = [s1, s2, s3];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseRule() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parseExamActivity();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseTiming();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseSpacing();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseMoodleQuizActivity();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseMoodleQuizOpenTime();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseMoodleQuizCloseTime();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseSpacing();
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c1(s1, s3, s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseMoodleHomeworkActivity();
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseMoodleHomeworkAllowSubmissionsTime();
            if (s3 !== peg$FAILED) {
              s4 = peg$parse_();
              if (s4 !== peg$FAILED) {
                s5 = peg$parseMoodleHomeworkDueTime();
                if (s5 !== peg$FAILED) {
                  s6 = peg$parse_();
                  if (s6 !== peg$FAILED) {
                    s7 = peg$parseMoodleHomeworkCutoffTime();
                    if (s7 !== peg$FAILED) {
                      s8 = peg$parseSpacing();
                      if (s8 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c2(s1, s3, s5, s7);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }
    }

    return s0;
  }

  function peg$parseExamActivity() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseEXAM_ACTIVITY_CODE();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseInteger();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseMoodleQuizActivity() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseMOODLE_QUIZ_ACTIVITY_CODE();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseInteger();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseMoodleQuizOpenTime() {
    var s0, s1;

    peg$silentFails++;
    s0 = peg$parseTiming();
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }

    return s0;
  }

  function peg$parseMoodleQuizCloseTime() {
    var s0, s1;

    peg$silentFails++;
    s0 = peg$parseTiming();
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }

    return s0;
  }

  function peg$parseMoodleHomeworkActivity() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseMOODLE_HOMEWORK_ACTIVITY_CODE();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseInteger();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseMoodleHomeworkAllowSubmissionsTime() {
    var s0, s1;

    peg$silentFails++;
    s0 = peg$parseTiming();
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }

    return s0;
  }

  function peg$parseMoodleHomeworkDueTime() {
    var s0, s1;

    peg$silentFails++;
    s0 = peg$parseTiming();
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c8); }
    }

    return s0;
  }

  function peg$parseMoodleHomeworkCutoffTime() {
    var s0, s1;

    peg$silentFails++;
    s0 = peg$parseTiming();
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c9); }
    }

    return s0;
  }

  function peg$parseActivity() {
    var s0, s1, s2;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseActivityCode();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseInteger();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c11(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c10); }
    }

    return s0;
  }

  function peg$parseTiming() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseMeetingSequence();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseTimeModifier();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c12(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseActivityCode() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseEXAM_ACTIVITY_CODE();
    if (s1 === peg$FAILED) {
      s1 = peg$parseMOODLE_QUIZ_ACTIVITY_CODE();
      if (s1 === peg$FAILED) {
        s1 = peg$parseMOODLE_HOMEWORK_ACTIVITY_CODE();
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c13(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseMeetingSequence() {
    var s0, s1, s2;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseSEMINAR_MEETING();
    if (s1 === peg$FAILED) {
      s1 = peg$parseLABORATORY_MEETING();
      if (s1 === peg$FAILED) {
        s1 = peg$parsePRACTICUM_MEETING();
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseInteger();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c15(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c14); }
    }

    return s0;
  }

  function peg$parseTimeModifier() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseMEETING_START();
    if (s1 === peg$FAILED) {
      s1 = peg$parseMEETING_END();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 45) {
        s3 = peg$c16;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c17); }
      }
      if (s3 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 43) {
          s3 = peg$c18;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c19); }
        }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parseDeltaTime();
        if (s4 !== peg$FAILED) {
          s3 = [s3, s4];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 64) {
          s4 = peg$c20;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c21); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseHHMM();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c22(s1, s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 64) {
        s2 = peg$c20;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseHHMM();
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c23(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseDeltaTime() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseInteger();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 109) {
        s2 = peg$c24;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c25); }
      }
      if (s2 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 104) {
          s2 = peg$c26;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c27); }
        }
        if (s2 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 100) {
            s2 = peg$c28;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c29); }
          }
          if (s2 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 119) {
              s2 = peg$c30;
              peg$currPos++;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c31); }
            }
          }
        }
      }
      if (s2 !== peg$FAILED) {
        s1 = [s1, s2];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseHHMM() {
    var s0, s1, s2, s3, s4;
